# master-thesis

./: .gitmodules  CMakeLists.txt  Delaunay.cpp  Delaunay.h  FlowComplex.cpp  FlowComplex.h  data_gen.cpp  data_gen.h  flowcomplexpaper.txt  main.cpp  utils.cpp  utils.h  vcpkg.json
FlowComplex4/: CMakeLists.txt  Delaunay.cpp  Delaunay.h  FlowComplex.cpp  FlowComplex.h  data_generation.cpp  data_generation.h  main.cpp  read_hopf_ply.py  utils.cpp  utils.h  vcpkg.json
FlowComplex4/comparison/: CMakeLists.txt  main.cpp
FlowComplex4/visualiser/: view_obj.py
visualiser/: view_obj.py
